--- a/viewer/templates/landing.html
+++ b/viewer/templates/landing.html
@@ -5,5 +5,9 @@
     <body>
         <h1>PlayOn</h1>
         <h2>What playlist would you like to view?</h2>
+        <form action='/viewer' method='GET'>
+            {{ form }}
+            <input type='submit' value='Submit'/>
+        </form>
     </body>
 </html>
