--- a/viewer/static/style.css
+++ b/viewer/static/style.css
@@ -1,8 +1,8 @@
 body {
     width: 100%;
     height: 100%;
-    margin-left: 2%;
     margin-top: 3%;
+    margin-left: 2%;
     background-color: #fffff0;
 }
 
@@ -15,5 +15,13 @@ ul {
 }
 
 p {
+    margin-top: 1%;
     margin-bottom: 1%;
+    margin-left: 2%;
+    font-size: 25px;
+    color: white;
+}
+
+.song-container {
+    width: 65%;
 }
