--- a/viewer/static/style.css
+++ b/viewer/static/style.css
@@ -15,11 +15,16 @@ ul {
 }
 
 p {
-    margin-top: 1%;
+    margin-top: 2%;
     margin-bottom: 1%;
-    margin-left: 2%;
+    margin-left: 1%;
     font-size: 25px;
-    color: white;
+    color: #ffffff;
+}
+
+iframe {
+    height: 80px;
+    width: 500px;
 }
 
 .song-container {
