--- a/viewer/templates/landing.html
+++ b/viewer/templates/landing.html
@@ -12,7 +12,7 @@
                 {% for song in songs %}
                 <li class='song-container' style='background: {{song.color}};'>
                     <p>{{song.name}}</p>
-                    <iframe src='https://embed.spotify.com/?uri={{ song.uri }}' frameborder='0' allowtransparency='true' height='80' width='350'></iframe>
+                    <iframe src='https://embed.spotify.com/?uri={{ song.uri }}' frameborder='0' allowtransparency='true'></iframe>
                     <img src='{{song.album}}' alt='{{song.name}}' height='80' width='80'>
                 </li>
                 {% endfor %}
