--- a/viewer/templates/landing.html
+++ b/viewer/templates/landing.html
@@ -19,10 +19,12 @@
                 </ul>
             </div>
         {% endif %}
-        <h2>What playlist would you like to view?</h2>
-        <form action='/viewer' method='GET'>
-            {{ form }}
-            <input type='submit' value='Submit'/>
-        </form>
+        <div id='form-section'>
+            <h2>What playlist would you like to view?</h2>
+            <form action='/viewer' method='GET'>
+                {{ form }}
+                <input type='submit' value='Submit'/>
+            </form>
+        </div>
     </body>
 </html>
